kakao login and naver login

--- a/package.json
+++ b/package.json
@@ -9,12 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@auth/supabase-adapter": "^1.7.2",
+    "@supabase/supabase-js": "^2.46.0",
+    "jsonwebtoken": "^9.0.2",
     "next": "14.2.14",
     "next-auth": "^5.0.0-beta.22",
     "react": "^18",
     "react-dom": "^18"
   },
   "devDependencies": {
+    "@types/jsonwebtoken": "^9.0.7",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
