--- a/package.json
+++ b/package.json
@@ -9,21 +9,25 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@auth/supabase-adapter": "^1.7.2",
-    "@supabase/supabase-js": "^2.46.0",
+    "@auth/supabase-adapter": "^1.7.4",
+    "@supabase/supabase-js": "^2.46.1",
+    "bcryptjs": "^2.4.3",
     "jsonwebtoken": "^9.0.2",
-    "next": "14.2.14",
+    "next": "^15.0.3",
     "next-auth": "^5.0.0-beta.22",
-    "react": "^18",
-    "react-dom": "^18"
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.6",
     "@types/jsonwebtoken": "^9.0.7",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "14.2.14",
+    "tailwindcss": "^3.4.15",
     "typescript": "^5"
   }
 }
